# MantaRay

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  light.rs  main.rs  material.rs  object.rs  pathtracing.rs  raytracing.rs  render.rs  scene.rs  shape.rs  test_helpers.rs  utils.rs
