[package]

name = "mantaray"
version = "0.0.1"
authors = ["Samuel de Framond <samuel@framond.fr>"]

[dependencies.image]
git = "https://github.com/PistonDevelopers/rust-image"

# [dependencies.nalgebra]
# git = "https://github.com/sebcrozet/nalgebra"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs.git"